# AI-MakerSpace-Certification-Challenge

./: .gitignore  .mcp.json  ADVANCED_RETRIEVAL_SUMMARY.md  AI-MakerSpace-Certification-Challenge.code-workspace  IMPLEMENTATION_SUMMARY.md  RAGAS_EVALUATION_GUIDE.md  README.md  main.py  overall_flow.excalidraw  pyproject.toml  run_ragas_eval.py  tasks.md
docs/: ADVANCED_RETRIEVAL.md  CLAUDE.md  NEXT_STEPS.md  QUICKSTART.md  README.md  architecture.md  certification-challenge-plan.md  certification-challenge.md  scoring-rubric-example.json  written_document_with_answers.doc
static/css/: style.css
static/js/: main.js
templates/: index.html
